force-app/main/default/objects/Revenue_Accrual__c/Revenue_Accrual__c.object-meta.xml
<CustomObject>
    <label>Revenue Accrual</label>
    <nameField>
        <displayFormat>REV-{000000}</displayFormat>
        <label>Revenue Accrual #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Accruals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>