force-app/main/default/objects/Revenue_Accrual__c/fields/Accrual_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Accrual_Adjustment__c</fullName>
    <description>This is the total accrued amount before FY19 if the POC is not 100%.</description>
    <inlineHelpText>This is the total accrued amount before FY19 if the POC is not 100%.</inlineHelpText>
    <label>Accrual Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>