force-app/main/default/objects/Revenue_Accrual__c/fields/Actual_Transaction_Fee__c.field-meta.xml
<CustomField>
    <fullName>Actual_Transaction_Fee__c</fullName>
    <label>Actual Transaction Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>