force-app/main/default/objects/Revenue_Accrual__c/fields/AYU_TOUCH__c.field-meta.xml
<CustomField>
    <fullName>AYU_TOUCH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AYU TOUCH</label>
    <type>Checkbox</type>
</CustomField>