force-app/main/default/objects/Revenue_Accrual__c/fields/Carried_Over_Accrual__c.field-meta.xml
<CustomField>
    <fullName>Carried_Over_Accrual__c</fullName>
    <description>The amount that is not accrued under the new revenue recognition. This amount will be carried over to the next month. This will be accrued when the engagement completes (POC = 100%).</description>
    <formula>If(And(VALUE(FY__c)&gt;=2019
   ,Line_of_Business__c = &apos;FVA&apos;
   ,Percent_Complete__c &lt;&gt; 1)
,Period_JE_Net_Old_Method__c
, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The amount that is not accrued under the new revenue recognition. This amount will be carried over to the next month. This will be accrued when the engagement completes (POC = 100%).</inlineHelpText>
    <label>Carried Over Accrual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>