force-app/main/default/objects/Revenue_Accrual__c/fields/Cumulative_AR__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_AR__c</fullName>
    <label>Cumulative AR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>