force-app/main/default/objects/Revenue_Accrual__c/fields/Cumulative_AR_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_AR_Adjustment__c</fullName>
    <label>Cumulative AR Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>