force-app/main/default/objects/Revenue_Accrual__c/fields/Cumulative_Deferred_Income__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Deferred_Income__c</fullName>
    <label>Cumulative Deferred Income</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>