force-app/main/default/objects/Revenue_Accrual__c/fields/Cumulative_Outstanding_AR__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Outstanding_AR__c</fullName>
    <description>AR over 120 days from the due date</description>
    <inlineHelpText>AR over 120 days from the due date</inlineHelpText>
    <label>Cumulative Outstanding AR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>