force-app/main/default/objects/Revenue_Accrual__c/fields/Cumulative_Pending_Accruals__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Pending_Accruals__c</fullName>
    <formula>If (Cumulative_AR__c + Cumulative_Cured_AR__c + Cumulative_WIP__c + Cumulative_Cured_WIP__c + Cumulative_Deferred_Income__c &lt; 0,-1 * (Cumulative_AR__c + Cumulative_Cured_AR__c + Cumulative_WIP__c + Cumulative_Cured_WIP__c + Cumulative_Deferred_Income__c) +  Cumulative_Subsequent_Accruals__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cumulative Pending Accruals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>