force-app/main/default/objects/Revenue_Accrual__c/fields/Cumulative_Total_Reversal__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Total_Reversal__c</fullName>
    <formula>If (Cumulative_AR__c + Cumulative_Cured_AR__c + Cumulative_WIP__c + Cumulative_Cured_WIP__c + Cumulative_Deferred_Income__c &lt; 0, Cumulative_AR__c + Cumulative_Cured_AR__c + Cumulative_WIP__c + Cumulative_Cured_WIP__c + Cumulative_Deferred_Income__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cumulative Total Reversal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>