force-app/main/default/objects/Revenue_Accrual__c/fields/Current_YTD_Accrued_Fees_USD__c.field-meta.xml
<CustomField>
    <fullName>Current_YTD_Accrued_Fees_USD__c</fullName>
    <label>Current YTD Accrued Fees USD</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>