force-app/main/default/objects/Revenue_Accrual__c/fields/Engagement_Year_Month__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Year_Month__c</fullName>
    <formula>Engagement__r.Name + &quot; &quot; + Text(Year__c) + &quot;-&quot; + TEXT(Month__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Year Month</label>
    <type>Text</type>
</CustomField>