force-app/main/default/objects/Revenue_Accrual__c/fields/Exclude_From_Reversal__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Reversal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This indicates if the auto reversal rule does not apply to this engagement.</description>
    <inlineHelpText>This indicates if the auto reversal rule does not apply to this engagement.</inlineHelpText>
    <label>Exclude From Reversal</label>
    <type>Checkbox</type>
</CustomField>