force-app/main/default/objects/Revenue_Accrual__c/fields/FAS_Split__c.field-meta.xml
<CustomField>
    <fullName>FAS_Split__c</fullName>
    <label>FVA Split</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>