force-app/main/default/objects/Revenue_Accrual__c/fields/Fees_Billed__c.field-meta.xml
<CustomField>
    <fullName>Fees_Billed__c</fullName>
    <label>Fees Billed</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>