force-app/main/default/objects/Revenue_Accrual__c/fields/Fixed_Fee__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Fee__c</fullName>
    <label>Fixed Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>