force-app/main/default/objects/Revenue_Accrual__c/fields/FR_Split__c.field-meta.xml
<CustomField>
    <fullName>FR_Split__c</fullName>
    <label>FR Split</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>