force-app/main/default/objects/Revenue_Accrual__c/fields/FY__c.field-meta.xml
<CustomField>
    <fullName>FY__c</fullName>
    <formula>IF(VALUE(TEXT(Month__c)) &gt;= 4, TEXT(VALUE(TEXT(Year__c))+1), TEXT(Year__c))</formula>
    <label>FY</label>
    <type>Text</type>
</CustomField>