force-app/main/default/objects/Revenue_Accrual__c/fields/Has_Multiple_Deliverables__c.field-meta.xml
<CustomField>
    <fullName>Has_Multiple_Deliverables__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this engagement has multiple deliverables. If this is true, the accrual can be made according to the stage.</description>
    <inlineHelpText>Indicates if this engagement has multiple deliverables. If this is true, the accrual can be made according to the stage.</inlineHelpText>
    <label>Has Multiple Deliverables</label>
    <type>Checkbox</type>
</CustomField>