force-app/main/default/objects/Revenue_Accrual__c/fields/Is_Current_FY__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_FY__c</fullName>
    <formula>IF( 
(Month(Today()) &gt;= 4 &amp;&amp; 
((CONTAINS(&apos;04,05,06,07,08,09,10,11,12&apos;, TEXT(Month__c)) &amp;&amp; TEXT(YEAR(TODAY())) = TEXT(Year__c)) || 
(CONTAINS(&apos;01,02,03&apos;, TEXT(Month__c)) &amp;&amp; TEXT(YEAR(TODAY()) + 1) = TEXT(Year__c)) 
)) || 
(Month(Today()) &lt; 4 &amp;&amp; 
((CONTAINS(&apos;04,05,06,07,08,09,10,11,12&apos;, TEXT(Month__c)) &amp;&amp; TEXT(YEAR(TODAY()) - 1) = TEXT(Year__c)) || 
(CONTAINS(&apos;01,02,03&apos;, TEXT(Month__c)) &amp;&amp; TEXT(YEAR(TODAY())) = TEXT(Year__c)) 
)) 
, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current FY</label>
    <type>Checkbox</type>
</CustomField>