force-app/main/default/objects/Revenue_Accrual__c/fields/Is_Month_Year_Current__c.field-meta.xml
<CustomField>
    <fullName>Is_Month_Year_Current__c</fullName>
    <formula>Monthly_Revenue_Process_Control__r.IsCurrent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Month/Year Current?</label>
    <type>Checkbox</type>
</CustomField>