force-app/main/default/objects/Revenue_Accrual__c/fields/LTD_Accrued_Fees_USD__c.field-meta.xml
<CustomField>
    <fullName>LTD_Accrued_Fees_USD__c</fullName>
    <formula>LTD_Accrued_Fees_LOCAL__c * Rate_to_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LTD Accrued Fees USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>