force-app/main/default/objects/Revenue_Accrual__c/fields/Monthly_Revenue_Process_Control__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Revenue_Process_Control__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Monthly Revenue Process Control Record</description>
    <label>Monthly Revenue Process Control</label>
    <referenceTo>Monthly_Revenue_Process_Control__c</referenceTo>
    <relationshipLabel>Revenue Accruals</relationshipLabel>
    <relationshipName>Revenue_Accruals</relationshipName>
    <type>Lookup</type>
</CustomField>