force-app/main/default/objects/Revenue_Accrual__c/fields/Out_of_Pocket_Billed__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Pocket_Billed__c</fullName>
    <label>Out of Pocket Billed</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>