force-app/main/default/objects/Revenue_Accrual__c/fields/Period_Accrued_Fee_Net__c.field-meta.xml
<CustomField>
    <fullName>Period_Accrued_Fee_Net__c</fullName>
    <description>Sum of Period_JE_Net__c, Period_JS_Net__c and Period_JW_Net__c</description>
    <formula>Period_JE_Net__c + Period_JS_Net__c + Period_JW_Net__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the accrual that will be posted in the financial system for this month. This amount incorporates any auto reversal amount, if there is any outstanding WIP.</inlineHelpText>
    <label>Period Accrued Fee Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>