force-app/main/default/objects/Revenue_Accrual__c/fields/Period_Accrued_Fee_Net_Del__c.field-meta.xml
<CustomField>
    <fullName>Period_Accrued_Fee_Net_Del__c</fullName>
    <description>Sum of PERIOD_JE_NET__C, PERIOD_JS_NET__C and PERIOD_JW_NET__C</description>
    <inlineHelpText>Sum of PERIOD_JE_NET__C, PERIOD_JS_NET__C and PERIOD_JW_NET__C</inlineHelpText>
    <label>Delete Period Accrued Fee Net</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>