force-app/main/default/objects/Revenue_Accrual__c/fields/Period_Accrued_Fees__c.field-meta.xml
<CustomField>
    <fullName>Period_Accrued_Fees__c</fullName>
    <label>Period Accrued Fees</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>