force-app/main/default/objects/Revenue_Accrual__c/fields/Period_Accrued_Fees_USD__c.field-meta.xml
<CustomField>
    <fullName>Period_Accrued_Fees_USD__c</fullName>
    <description>This is the period accrued fee net in USD. This amount is copied from the financial system at the month end.</description>
    <inlineHelpText>This is the period accrued fee net in USD. This amount is copied from the financial system at the month end.</inlineHelpText>
    <label>Period Accrued Fees USD</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>