force-app/main/default/objects/Revenue_Accrual__c/fields/Period_AR__c.field-meta.xml
<CustomField>
    <fullName>Period_AR__c</fullName>
    <label>Period AR</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>