force-app/main/default/objects/Revenue_Accrual__c/fields/Period_Cured_AR__c.field-meta.xml
<CustomField>
    <fullName>Period_Cured_AR__c</fullName>
    <label>Period Cured AR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>