force-app/main/default/objects/Revenue_Accrual__c/fields/Period_Deferred_Income__c.field-meta.xml
<CustomField>
    <fullName>Period_Deferred_Income__c</fullName>
    <inlineHelpText>Potential Revenue Accrual amount that is equals to Fee Invoiced Amount - Revenue Accrued Amount</inlineHelpText>
    <label>Period Deferred Income</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>