force-app/main/default/objects/Revenue_Accrual__c/fields/Period_Deferred_Income_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Period_Deferred_Income_Remaining__c</fullName>
    <formula>Period_Deferred_Income__c - IF(AND(Period_Accrued_Fees__c &gt; 0, Period_Deferred_Income__c &gt; 0), MIN( Prior_Accrued_Fees__c , Period_Deferred_Income__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period Deferred Income Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>