force-app/main/default/objects/Revenue_Accrual__c/fields/Period_JE_Net__c.field-meta.xml
<CustomField>
    <fullName>Period_JE_Net__c</fullName>
    <description>This is the standard accrual. This amount is posted under the document type, JE, in the financial system.</description>
    <formula>IF(Or(VALUE(FY__c)&lt;2019
     ,And(Line_of_Business__c = &apos;FVA&apos;
         ,Percent_Complete__c = 1)
     ,Line_of_Business__c &lt;&gt; &apos;FVA&apos;
     ,Or(ISPICKVAL(Engagement__r.HL_Entity__c, &apos;HL Netherlands B.V.&apos;)
            ,ISPICKVAL(Engagement__r.HL_Entity__c, &apos;HL Leonardo &amp; Co SpA&apos;)))
   , Period_JE_Net_Old_Method__c
   ,0)
+
IF(
   And(VALUE(FY__c)&gt;=2019
      ,Line_of_Business__c = &apos;FVA&apos;
      ,Percent_Complete__c=1)
  ,Prior_Carried_Over_Accrual__c
  ,0)
+ 
Accrual_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the standard accrual. This amount is posted under the document type, JE, in the financial system.</inlineHelpText>
    <label>Period JE Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>