force-app/main/default/objects/Revenue_Accrual__c/fields/Period_JE_Net_Del__c.field-meta.xml
<CustomField>
    <fullName>Period_JE_Net_Del__c</fullName>
    <description>Standard Accrued: JDE Doc Type JE</description>
    <inlineHelpText>Standard Accrued: JDE Doc Type JE</inlineHelpText>
    <label>Delete Period JE Net</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>