force-app/main/default/objects/Revenue_Accrual__c/fields/Period_JE_Net_Old_Method__c.field-meta.xml
<CustomField>
    <fullName>Period_JE_Net_Old_Method__c</fullName>
    <formula>IF(Exclude_From_Reversal__c, Period_Accrued_Fees__c, 
IF(AND(Uncured_AR__c &lt;= 0, Uncured_WIP__c &lt;= 0), Period_Accrued_Fees__c + Cumulative_Subsequent_Accruals__c, 
IF(AND(Period_Accrued_Fees__c &gt; 0, Period_AR__c + Period_Deferred_Income__c &gt; 0), MIN(Period_Accrued_Fees__c, Period_AR__c + Period_Deferred_Income__c), 
IF(Period_Accrued_Fees__c &lt; 0, Period_Accrued_Fees__c, 0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period JE Net Old Method</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>