force-app/main/default/objects/Revenue_Accrual__c/fields/Period_JS_Net_Del__c.field-meta.xml
<CustomField>
    <fullName>Period_JS_Net_Del__c</fullName>
    <description>AR Reversal Related Accrued: JDE Doc Type JS</description>
    <inlineHelpText>AR Reversal Related Accrued: JDE Doc Type JS</inlineHelpText>
    <label>Delete Period JS Net</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>