force-app/main/default/objects/Revenue_Accrual__c/fields/Period_JW_Net__c.field-meta.xml
<CustomField>
    <fullName>Period_JW_Net__c</fullName>
    <description>WIP Related Accrued: JDE Doc Type JW</description>
    <formula>IF(Exclude_From_Reversal__c, 0, 
IF(Uncured_AR__c &lt;= 0 &amp;&amp; Uncured_WIP__c &lt;= 0, Period_WIP__c + Period_WIP_Adjustment__c + Period_Cured_WIP__c, 
IF(Period_Accrued_Fees__c &lt; 0, 
IF(Period_Accrued_Fees__c &lt; Period_WIP__c + Period_WIP_Adjustment__c, Period_Cured_WIP__c, 
    Period_WIP__c -  (Period_Accrued_Fees__c + Period_WIP_Adjustment__c) + Period_Cured_WIP__c      ),
    Period_WIP__c + Period_WIP_Adjustment__c + Period_Cured_WIP__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>WIP Related Accrued: JDE Doc Type JW</inlineHelpText>
    <label>Period JW Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>