force-app/main/default/objects/Revenue_Accrual__c/fields/Period_JW_Net_Del__c.field-meta.xml
<CustomField>
    <fullName>Period_JW_Net_Del__c</fullName>
    <description>WIP Related Accrued: JDE Doc Type JW</description>
    <inlineHelpText>WIP Related Accrued: JDE Doc Type JW</inlineHelpText>
    <label>Delete Period JW Net</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>