force-app/main/default/objects/Revenue_Accrual__c/fields/Period_Outsourced_Fee__c.field-meta.xml
<CustomField>
    <fullName>Period_Outsourced_Fee__c</fullName>
    <inlineHelpText>Gross fee amount for period that is attributable to offshore execution.</inlineHelpText>
    <label>Period Outsourced Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>