force-app/main/default/objects/Revenue_Accrual__c/fields/Period_Outstanding_AR_Net_USD__c.field-meta.xml
<CustomField>
    <fullName>Period_Outstanding_AR_Net_USD__c</fullName>
    <description>AR over 120 days in USD from the due date that has not been posted to the expense account</description>
    <inlineHelpText>AR over 120 days in USD from the due date that has not been posted to the expense account</inlineHelpText>
    <label>Period Outstanding AR Net USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>