force-app/main/default/objects/Revenue_Accrual__c/fields/Period_Pending_Accruals__c.field-meta.xml
<CustomField>
    <fullName>Period_Pending_Accruals__c</fullName>
    <description>This is the amount that will be automatically accrued when the outstanding AR/WIP are cured.</description>
    <formula>If (Period_AR__c + Period_Cured_AR__c + Period_WIP__c + Period_Cured_WIP__c + Period_Deferred_Income__c &lt; 0, 
-1 * (Period_AR__c + Period_Cured_AR__c + Period_WIP__c + Period_Cured_WIP__c + Period_Deferred_Income__c) +  Period_Subsequent_Accruals__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period Pending Accruals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>