force-app/main/default/objects/Revenue_Accrual__c/fields/Period_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Period_Revenue__c</fullName>
    <description>Total accrual less outstanding AR</description>
    <formula>Period_Accrued_Fee_Net__c + Period_Outstanding_AR_Net__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total accrual less outstanding AR</inlineHelpText>
    <label>Period Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>