force-app/main/default/objects/Revenue_Accrual__c/fields/Period_Revenue_USD__c.field-meta.xml
<CustomField>
    <fullName>Period_Revenue_USD__c</fullName>
    <formula>Period_Accrued_Fees_USD__c +  Period_Outstanding_AR_Net_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period Revenue USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>