force-app/main/default/objects/Revenue_Accrual__c/fields/Period_Subsequent_Accruals__c.field-meta.xml
<CustomField>
    <fullName>Period_Subsequent_Accruals__c</fullName>
    <label>Period Subsequent Accruals</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>