force-app/main/default/objects/Revenue_Accrual__c/fields/Period_Total_Reversal__c.field-meta.xml
<CustomField>
    <fullName>Period_Total_Reversal__c</fullName>
    <formula>If (Period_AR__c + Period_Cured_AR__c + Period_WIP__c + Period_Cured_WIP__c + Period_Deferred_Income__c &lt; 0, 
Period_AR__c + Period_Cured_AR__c + Period_WIP__c + Period_Cured_WIP__c + Period_Deferred_Income__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the amount that will be reversed at the end of this month.</inlineHelpText>
    <label>Period Total Reversal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>