force-app/main/default/objects/Revenue_Accrual__c/fields/Period_WIP__c.field-meta.xml
<CustomField>
    <fullName>Period_WIP__c</fullName>
    <inlineHelpText>Potential Revenue Accrued that will be reversed in the current period.</inlineHelpText>
    <label>Period WIP</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>