force-app/main/default/objects/Revenue_Accrual__c/fields/Period_WIP_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Period_WIP_Adjustment__c</fullName>
    <label>Period WIP Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>