force-app/main/default/objects/Revenue_Accrual__c/fields/Prior_Carried_Over_Accrual__c.field-meta.xml
<CustomField>
    <fullName>Prior_Carried_Over_Accrual__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This is the amount that was not accrued previously because the engagement had not been complete.</description>
    <inlineHelpText>This is the amount that was not accrued previously because the engagement had not been complete.</inlineHelpText>
    <label>Prior Carried Over Accrual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>